[gd_scene load_steps=5 format=3 uid="uid://clf00e3d4pnjg"]

[ext_resource type="Script" uid="uid://t2jcucm27qds" path="res://game/game.gd" id="1_4fuuu"]
[ext_resource type="PackedScene" uid="uid://cmhbaw5ohlw26" path="res://systems/player_manager/player_manager.tscn" id="2_vasa2"]
[ext_resource type="Script" uid="uid://dnr6umaxu6q7h" path="res://game/message_center.gd" id="3_h7iqs"]

[sub_resource type="LabelSettings" id="LabelSettings_h7iqs"]
font_size = 18
outline_size = 12
outline_color = Color(0, 0, 0, 1)

[node name="GameController" type="Node"]
script = ExtResource("1_4fuuu")

[node name="PlayerManager" parent="." instance=ExtResource("2_vasa2")]

[node name="MessageCenter" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("3_h7iqs")

[node name="Message" type="Label" parent="MessageCenter"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Test"
label_settings = SubResource("LabelSettings_h7iqs")
horizontal_alignment = 1
vertical_alignment = 1
